[package]
name = "myeon"
version = "0.1.0"
authors = ["Claes Adamsson <claes.adamsson@gmail.com>"]
homepage = "https://cladam.github.io/"
repository = "https://github.com/cladam/myeon"
readme = "README.md"
license = "MIT"
description = "myeon is a minimalist, keyboard-driven TUI Kanban board"
keywords = ["tui", "kanban", "planning", "cli"]
categories = ["command-line-utilities", "development-tools"]
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.0.0"
thiserror = "2.0.17"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.42", features = ["serde"] }
self_update = "0.42.0"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
directories = "6.0.0"

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[lib]
name = "myeon"
path = "src/lib.rs"